--- a/index.html
+++ b/index.html
@@ -33,8 +33,12 @@
 		<link rel="stylesheet" href="css/animate.min.css">
 		<link rel="stylesheet" href="css/owl.carousel.css">
 		<link rel="stylesheet" href="css/main.css">
-		<link href="https://cdn.jsdelivr.net/gh/barestho/barestho-widget-integration@improvement/iframe/widget-style.css" rel="stylesheet">
-		<script src="https://cdn.jsdelivr.net/gh/barestho/barestho-widget-integration@improvement/iframe/widget-script.js" defer></script>
+		<link
+			href="https://cdn.jsdelivr.net/gh/barestho/barestho-widget-integration@improvement/iframe/widget-style.css"
+			rel="stylesheet">
+		<script
+			src="https://cdn.jsdelivr.net/gh/barestho/barestho-widget-integration@improvement/iframe/widget-script.js"
+			defer></script>
 	</head>
 
 	<body>
@@ -45,15 +49,11 @@
 
 		<!-- start banner Area -->
 
-		<div id="barestho-widget-popup-container" style="display: none;">
-			<div id="barestho-widget-popup">
-				<iframe id="barestho-popup-iframe"
-					src="https://barestho.reservationv2.barestotech.ovh:8000/?view=popupview&primary-color=%238B00CC&barestho-logo=%23252332&barestho-alternate=false&secondary-color=%23FFFFFF"
-					frameborder="0"></iframe>
-			</div>
+		<div id="barestho-widget-popup-container">
+			<iframe id="barestho-popup-iframe"
+				src="https://barestho.reservationv2.barestotech.ovh:8000/?view=popupview&primary-color=%238B00CC&barestho-logo=%23252332&barestho-alternate=false&secondary-color=%23FFFFFF"
+				frameborder="0"></iframe>
 		</div>
-
-		
 
 		<section class="banner-area">
 			<div class="container">
@@ -123,7 +123,9 @@
 						</p>
 					</div>
 					<div class="col-lg-5 reservation-right">
-						<iframe id="barestho-widget-iframe" src="https://barestho.reservationv2.barestotech.ovh:8000/?view=widget&primary-color=%238B00CC&barestho-logo=%23252332&barestho-alternate=false&secondary-color=%23FFFFFF" frameborder="0"></iframe>
+						<iframe id="barestho-widget-iframe"
+							src="https://barestho.reservationv2.barestotech.ovh:8000/?view=widget&primary-color=%238B00CC&barestho-logo=%23252332&barestho-alternate=false&secondary-color=%23FFFFFF"
+							frameborder="0"></iframe>
 					</div>
 				</div>
 			</div>
