chore: addding new cdn

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 		<link rel="stylesheet" href="css/owl.carousel.css">
 		<link rel="stylesheet" href="css/main.css">
 		<link
-			href="https://cdn.jsdelivr.net/gh/barestho/barestho-widget-integration@improvement/iframe/barestho-style.css"
+			href="https://public.reservationv2.barestotech.ovh:8000/cdn/barestho-widget-style.css"
 			rel="stylesheet">
 		<script
-			src="https://cdn.jsdelivr.net/gh/barestho/barestho-widget-integration@improvement/iframe/barestho-script.js"
+			src="https://public.reservationv2.barestotech.ovh:8000/cdn/barestho-widget-script.js"
 			defer></script>
 	</head>
 
