chore: adding new cdn

--- a/index.html
+++ b/index.html
@@ -33,12 +33,8 @@
 		<link rel="stylesheet" href="css/animate.min.css">
 		<link rel="stylesheet" href="css/owl.carousel.css">
 		<link rel="stylesheet" href="css/main.css">
-		<link
-			href="https://public.reservationv2.barestotech.ovh:8000/cdn/barestho-widget-style.css"
-			rel="stylesheet">
-		<script
-			src="https://public.reservationv2.barestotech.ovh:8000/cdn/barestho-widget-script.js"
-			defer></script>
+		<link href="https://cdn.jsdelivr.net/gh/barestho/barestho-widget-integration@barestho/barestho-style.css" rel="stylesheet">
+		<script src="https://cdn.jsdelivr.net/gh/barestho/barestho-widget-integration@barestho/barestho-script.js" defer></script>
 	</head>
 
 	<body>
