--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 
 	<body>
 
-		<iframe id="barestho-widget-toggle"
+		<!-- <iframe id="barestho-widget-toggle"
 			src="https://barestho.reservationv2.barestotech.ovh:8000/?view=toggle&primary-color=%238B00CC&barestho-logo=%23252332&barestho-alternate=false&secondary-color=%23FFFFFF&text-color=%23FFFFFF"
-			frameborder="0"></iframe>
+			frameborder="0"></iframe> -->
 
 		<!-- start banner Area -->
 
