--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
 		<link rel="stylesheet" href="css/animate.min.css">
 		<link rel="stylesheet" href="css/owl.carousel.css">
 		<link rel="stylesheet" href="css/main.css">
-		<link href="https://cdn.jsdelivr.net/gh/barestho/barestho-widget-integration@barestho/barestho-style.css" rel="stylesheet">
-		<script src="https://cdn.jsdelivr.net/gh/barestho/barestho-widget-integration@barestho/barestho-script.js" defer></script>
+		<link href="https://cdn.jsdelivr.net/gh/barestho/barestho-widget-integration@barestho/style-barestho.css" rel="stylesheet">
+		<script src="https://cdn.jsdelivr.net/gh/barestho/barestho-widget-integration@barestho/script-barestho.js" defer></script>
 	</head>
 
 	<body>
 
-		<!-- <iframe id="barestho-widget-toggle"
+		<iframe id="barestho-widget-toggle"
 			src="https://barestho.reservationv2.barestotech.ovh:8000/?view=toggle&primary-color=%238B00CC&barestho-logo=%23252332&barestho-alternate=false&secondary-color=%23FFFFFF&text-color=%23FFFFFF"
-			frameborder="0"></iframe> -->
+			frameborder="0"></iframe>
 
 		<!-- start banner Area -->
 
