chore: test reservation

--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
 	<body>
 
 		<iframe id="barestho-widget-toggle"
-			src="https://barestho.reservationv2.barestotech.ovh:8000/?view=toggle&primary-color=%238B00CC&secondary-color=%238B00CC&barestho-logo=%23252332&barestho-alternate=false&text-color=%23FFFFFF"
+			src="https://test.reservationv2.barestotech.ovh:8000/?view=toggle&primary-color=%238B00CC&secondary-color=%238B00CC&barestho-logo=%23252332&barestho-alternate=false&text-color=%23FFFFFF"
 			frameborder="0"></iframe>
 
 		<!-- start banner Area -->
 
 		<div id="barestho-widget-popup-container">
 			<iframe id="barestho-popup-iframe"
-				src="https://barestho.reservationv2.barestotech.ovh:8000/?view=popup&primary-color=%238B00CC&secondary-color=%238B00CC&barestho-logo=%23252332&barestho-alternate=false&text-color=%23FFFFFF"
+				src="https://test.reservationv2.barestotech.ovh:8000/?view=popup&primary-color=%238B00CC&secondary-color=%238B00CC&barestho-logo=%23252332&barestho-alternate=false&text-color=%23FFFFFF"
 				frameborder="0"></iframe>
 		</div>
 
@@ -120,7 +120,7 @@
 					</div>
 					<div class="col-lg-5 reservation-right">
 						<iframe id="barestho-widget-iframe"
-							src="https://barestho.reservationv2.barestotech.ovh:8000/?view=widget&primary-color=%238B00CC&secondary-color=%238B00CC&barestho-logo=%23252332&barestho-alternate=false&text-color=%23FFFFFF"
+							src="https://test.reservationv2.barestotech.ovh:8000/?view=widget&primary-color=%238B00CC&secondary-color=%238B00CC&barestho-logo=%23252332&barestho-alternate=false&text-color=%23FFFFFF"
 							frameborder="0"></iframe>
 					</div>
 				</div>
