--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 		<link rel="stylesheet" href="css/animate.min.css">
 		<link rel="stylesheet" href="css/owl.carousel.css">
 		<link rel="stylesheet" href="css/main.css">
-		<link href="https://cdn.jsdelivr.net/gh/barestho/barestho-widget-integration@master/style-barestho.css" rel="stylesheet">
-		<script src="https://cdn.jsdelivr.net/gh/barestho/barestho-widget-integration@master/script-barestho.js" defer></script>
+		<link href="https://cdn.jsdelivr.net/gh/barestho/barestho-widget-integration@latest/style-barestho.css" rel="stylesheet">
+		<script src="https://cdn.jsdelivr.net/gh/barestho/barestho-widget-integration@latest/script-barestho.js" defer></script>
 	</head>
 
 	<body>
