--- a/index.html
+++ b/index.html
@@ -33,8 +33,13 @@
 		<link rel="stylesheet" href="css/animate.min.css">
 		<link rel="stylesheet" href="css/owl.carousel.css">
 		<link rel="stylesheet" href="css/main.css">
-		<link href="https://cdn.jsdelivr.net/gh/barestho/barestho-widget-integration@latest/style-barestho.css" rel="stylesheet">
-		<script src="https://cdn.jsdelivr.net/gh/barestho/barestho-widget-integration@latest/script-barestho.js" defer></script>
+		<script src="https://cdn.tailwindcss.com"></script>
+		<link
+			href="https://cdn.jsdelivr.net/gh/barestho/barestho-widget-integration@latest/style-barestho.css"
+			rel="stylesheet">
+		<script
+			src="https://cdn.jsdelivr.net/gh/barestho/barestho-widget-integration@latest/script-barestho.js"
+			defer></script>
 	</head>
 
 	<body>
@@ -45,9 +50,11 @@
 
 		<!-- start banner Area -->
 
-		<div id="barestho-widget-popup-container">
+		<div id="barestho-widget-popup-container"
+			class="barestho-widget-popup-container bg-gray-800 text-white">
 			<iframe id="barestho-popup-iframe"
-				src="https://test.reservationv2.barestotech.ovh:8000/?view=popup&primary-color=%238B00CC&secondary-color=%238B00CC&barestho-logo=%23252332&barestho-alternate=false&text-color=%23FFFFFF"
+				class="barestho-popup-iframe"
+				src="https://barestho.reservationv2.barestotech.ovh:8000/?view=popup"
 				frameborder="0"></iframe>
 		</div>
 
@@ -187,6 +194,47 @@
 			</div>
 		</section>
 		<!-- End gallery-area Area -->
+
+		<div class="flex items-center justify-evenly h-screen">
+			<div id="barestho-widget-popup-container-barestho"
+				class="barestho-widget-popup-container bg-gray-800 text-white">
+				<p class="text-center text-4xl font-bold mt-4">Restaurant Barestho</p>
+				<iframe id="barestho-popup-iframe-barestho"
+					class="barestho-popup-iframe"
+					src="https://barestho.reservationv2.barestotech.ovh:8000/?view=popup"
+					frameborder="0"></iframe>
+			</div>
+			<button onclick="baresthoToggleIframe('barestho')"
+				class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mt-4">
+				Réserver au restaurant Barestho
+			</button>
+
+			<div id="barestho-widget-popup-container-masu"
+				class="barestho-widget-popup-container bg-gray-700 text-white">
+				<p class="text-center text-4xl font-bold mt-4">Restaurant Masu</p>
+				<iframe id="barestho-popup-iframe-masu"
+					class="barestho-popup-iframe"
+					src="https://masu.reservationv2.barestotech.ovh:8000/?view=popup"
+					frameborder="0"></iframe>
+			</div>
+			<button onclick="baresthoToggleIframe('masu')"
+				class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded mt-4">
+				Réserver au restaurant Masu
+			</button>
+
+			<div id="barestho-widget-popup-container-test"
+				class="barestho-widget-popup-container bg-gray-900 text-white">
+				<p class="text-center text-4xl font-bold mt-4">Restaurant Test</p>
+				<iframe id="barestho-popup-iframe-test"
+					class="barestho-popup-iframe"
+					src="https://cocotte.reservationv2.barestotech.ovh:8000/?view=popup"
+					frameborder="0"></iframe>
+			</div>
+			<button onclick="baresthoToggleIframe('test')"
+				class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded mt-4">
+				Réserver au restaurant Test
+			</button>
+		</div>
 
 		<!-- Start review Area -->
 		<section class="review-area section-gap">
