chore: design mobile ubtton

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 		</section>
 		<!-- End gallery-area Area -->
 
-		<div class="flex items-center justify-evenly h-screen flex-col xl:flex-row">
+		<div class="flex items-center justify-evenly mt-14 pb-20 flex-col xl:flex-row">
 			<div id="barestho-widget-popup-container-barestho"
 				class="barestho-widget-popup-container bg-gray-800 text-white">
 				<p class="text-center text-4xl font-bold mt-4">Restaurant Barestho</p>
