chore: modify colors

--- a/index.html
+++ b/index.html
@@ -197,41 +197,38 @@
 
 		<div class="flex items-center justify-evenly mt-14 pb-20 flex-col xl:flex-row">
 			<div id="barestho-widget-popup-container-barestho"
-				class="barestho-widget-popup-container bg-gray-800 text-white">
-				<p class="text-center text-4xl font-bold mt-4">Restaurant Barestho</p>
+				class="barestho-widget-popup-container">
 				<iframe id="barestho-popup-iframe-barestho"
 					class="barestho-popup-iframe"
-					src="https://barestho.reservationv2.barestotech.ovh:8000/?view=popup"
+					src="https://barestho.reservationv2.barestotech.ovh:8000/?view=popup&primary-color=%23F97316&secondary-color=%23F97316&barestho-logo=%23252332&barestho-alternate=false&text-color=%23FFFFFF"
 					frameborder="0"></iframe>
 			</div>
 			<button onclick="baresthoToggleIframe('barestho')"
-				class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mt-4">
+				class="bg-orange-500  text-white font-bold py-2 px-4 rounded mt-4">
 				Réserver au restaurant Barestho
 			</button>
 
 			<div id="barestho-widget-popup-container-masu"
-				class="barestho-widget-popup-container bg-gray-700 text-white">
-				<p class="text-center text-4xl font-bold mt-4">Restaurant Masu</p>
+				class="barestho-widget-popup-container">
 				<iframe id="barestho-popup-iframe-masu"
 					class="barestho-popup-iframe"
-					src="https://masu.reservationv2.barestotech.ovh:8000/?view=popup"
+					src="https://masu.reservationv2.barestotech.ovh:8000/?view=popup&primary-color=%2384CC16&secondary-color=%2384CC16&barestho-logo=%23252332&barestho-alternate=false&text-color=%23FFFFFF"
 					frameborder="0"></iframe>
 			</div>
 			<button onclick="baresthoToggleIframe('masu')"
-				class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded mt-4">
+				class="bg-lime-500 text-white font-bold py-2 px-4 rounded mt-4">
 				Réserver au restaurant Masu
 			</button>
 
 			<div id="barestho-widget-popup-container-test"
-				class="barestho-widget-popup-container bg-gray-900 text-white">
-				<p class="text-center text-4xl font-bold mt-4">Restaurant Test</p>
+				class="barestho-widget-popup-container">
 				<iframe id="barestho-popup-iframe-test"
 					class="barestho-popup-iframe"
-					src="https://cocotte.reservationv2.barestotech.ovh:8000/?view=popup"
+					src="https://cocotte.reservationv2.barestotech.ovh:8000/?view=popup&primary-color=%2314B8A6&secondary-color=%2314B8A6&barestho-logo=%23252332&barestho-alternate=false&text-color=%23FFFFFF"
 					frameborder="0"></iframe>
 			</div>
 			<button onclick="baresthoToggleIframe('test')"
-				class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded mt-4">
+				class="bg-teal-500  text-white font-bold py-2 px-4 rounded mt-4">
 				Réserver au restaurant Test
 			</button>
 		</div>
