chore:modify design

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			class="barestho-widget-popup-container bg-gray-800 text-white">
 			<iframe id="barestho-popup-iframe"
 				class="barestho-popup-iframe"
-				src="https://barestho.reservationv2.barestotech.ovh:8000/?view=popup"
+				src="https://barestho.reservationv2.barestotech.ovh:8000/?view=popup&primary-color=%238B00CC&secondary-color=%238B00CC&barestho-logo=%23252332&barestho-alternate=false&text-color=%23FFFFFF"
 				frameborder="0"></iframe>
 		</div>
 
