--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		<!-- start banner Area -->
 
 		<div id="barestho-widget-popup-container"
-			class="barestho-widget-popup-container bg-gray-800 text-white">
+			class="barestho-widget-popup-container text-white">
 			<iframe id="barestho-popup-iframe"
 				class="barestho-popup-iframe"
 				src="https://barestho.reservationv2.barestotech.ovh:8000/?view=popup&primary-color=%238B00CC&secondary-color=%238B00CC&barestho-logo=%23252332&barestho-alternate=false&text-color=%23FFFFFF"
