--- a/index.html
+++ b/index.html
@@ -34,29 +34,29 @@
 		<link rel="stylesheet" href="css/owl.carousel.css">
 		<link rel="stylesheet" href="css/main.css">
 		<script src="https://cdn.tailwindcss.com"></script>
+
 		<link
 			href="https://cdn.jsdelivr.net/gh/barestho/barestho-widget-integration@latest/style-barestho.css"
 			rel="stylesheet">
 		<script
 			src="https://cdn.jsdelivr.net/gh/barestho/barestho-widget-integration@latest/script-barestho.js"
 			defer></script>
+
 	</head>
 
 	<body>
 
-		<iframe id="barestho-widget-toggle"
-			src="https://test.reservationv2.barestotech.ovh:8000/?view=toggle&primary-color=%238B00CC&secondary-color=%238B00CC&barestho-logo=%23252332&barestho-alternate=false&text-color=%23FFFFFF"
-			frameborder="0"></iframe>
+		<iframe
+			id="masu"
+			class="barestho-widget"
+			src="https://test.reservationv2.barestotech.ovh:8000/?view=toggle&primary-color=%238B00CC&secondary-color=%238B00CC&barestho-logo=%23252332&barestho-alternate=false&text-color=%23FFFFFF">
+		</iframe>
 
-		<!-- start banner Area -->
-
-		<div id="barestho-widget-popup-container"
-			class="barestho-widget-popup-container text-white">
-			<iframe id="barestho-popup-iframe"
-				class="barestho-popup-iframe"
-				src="https://barestho.reservationv2.barestotech.ovh:8000/?view=popup&primary-color=%238B00CC&secondary-color=%238B00CC&barestho-logo=%23252332&barestho-alternate=false&text-color=%23FFFFFF"
-				frameborder="0"></iframe>
-		</div>
+		<iframe
+			id="masu"
+			class="barestho-widget"
+			src="https://test.reservationv2.barestotech.ovh:8000/?view=popup&primary-color=%238B00CC&secondary-color=%238B00CC&barestho-logo=%23252332&barestho-alternate=false&text-color=%23FFFFFF">
+		</iframe>
 
 		<section class="banner-area">
 			<div class="container">
@@ -126,9 +126,11 @@
 						</p>
 					</div>
 					<div class="col-lg-5 reservation-right">
-						<iframe id="barestho-widget-iframe"
-							src="https://test.reservationv2.barestotech.ovh:8000/?view=widget&primary-color=%238B00CC&secondary-color=%238B00CC&barestho-logo=%23252332&barestho-alternate=false&text-color=%23FFFFFF"
-							frameborder="0"></iframe>
+						<iframe
+							id="masu"
+							class="barestho-widget"
+							src="https://test.reservationv2.barestotech.ovh:8000/?view=in-page">
+						</iframe>
 					</div>
 				</div>
 			</div>
@@ -195,7 +197,9 @@
 		</section>
 		<!-- End gallery-area Area -->
 
-		<div class="flex items-center justify-evenly mt-14 pb-20 flex-col xl:flex-row">
+		<div
+			class="flex items-center justify-evenly mt-14 pb-20 flex-col xl:flex-row">
+
 			<div id="barestho-widget-popup-container-barestho"
 				class="barestho-widget-popup-container">
 				<iframe id="barestho-popup-iframe-barestho"
@@ -203,6 +207,7 @@
 					src="https://barestho.reservationv2.barestotech.ovh:8000/?view=popup&primary-color=%23F97316&secondary-color=%23F97316&barestho-logo=%23252332&barestho-alternate=false&text-color=%23FFFFFF"
 					frameborder="0"></iframe>
 			</div>
+
 			<button onclick="baresthoToggleIframe('barestho')"
 				class="bg-orange-500  text-white font-bold py-2 px-4 rounded mt-4">
 				Réserver au restaurant Barestho
