--- a/index.html
+++ b/index.html
@@ -34,12 +34,11 @@
 		<link rel="stylesheet" href="css/owl.carousel.css">
 		<link rel="stylesheet" href="css/main.css">
 		<script src="https://cdn.tailwindcss.com"></script>
-
-		<link
-			href="https://cdn.jsdelivr.net/gh/barestho/barestho-widget-integration@latest/style-barestho.css"
-			rel="stylesheet">
+		
+		
+		<link rel="stylesheet" href="css/style-barestho.css">
 		<script
-			src="https://cdn.jsdelivr.net/gh/barestho/barestho-widget-integration@latest/script-barestho.js"
+			src="js/script-barestho.js"
 			defer></script>
 
 
